--- a/components.json
+++ b/components.json
@@ -6,7 +6,7 @@
   "tailwind": {
     "config": "",
     "css": "src/App.css",
-    "baseColor": "sky",
+    "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
