--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "node-irr": "^2.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
