--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.34.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
@@ -21,9 +22,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "fs-extra": "^11.3.2",
+    "idb": "^8.0.3",
+    "inversify": "^7.10.4",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "node-appwrite": "^20.3.0",
     "node-irr": "^2.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -31,6 +35,7 @@
     "recharts": "^3.2.1",
     "redis": "^5.8.2",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
